Segunda Agragaciondel proyecto

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeSchool - Plataforma Educativa</title>
-    
+    <title>EvalSys - Plataforma Educativa</title>
+
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/header.css">
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/modals.css">
 </head>
+
 <body>
     <!-- Header -->
     <div id="header-container"></div>
@@ -36,7 +38,7 @@
         <!-- Main Content -->
         <main class="content">
             <div class="welcome-banner">
-                <h1>Bienvenido a CodeSchool</h1>
+                <h1>Bienvenido a EvalSys</h1>
                 <p>Una plataforma colaborativa para aprender programación entre estudiantes y docentes</p>
             </div>
 
@@ -60,4 +62,5 @@
     <script src="js/modals.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
